<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_logout">Logout</string>
    <string name="reveal_app_name" translatable="false">Reveal</string>
    <string name="app_name" translatable="false">@string/reveal_app_name</string>
    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">login failed. Try later</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>
    <string name="url_separator">/</string>
    <string name="device_timezone_changed">"The device's timezone changed. Please login again."</string>
    <string name="device_time_changed">"The device's time has changed. Please login again."</string>
    <string name="prompt_password">Enter Password </string>
    <string name="prompt_username">Enter Username</string>
    <string name="reveal">Reveal</string>
    <string name="sync">Sync</string>
    <string name="campaign">Plan</string>
    <string name="operational_area">Operational Area</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="app_version">Version %1$s</string>
    <string name="app_updated">Updated %1$s</string>
    <string name="district">District:</string>
    <string name="facility">Location:</string>
    <string name="canton">Canton:</string>
    <string name="operator">User:</string>
    <string name="fetch_location_and_structures_failed">This operational area has not been defined in the system. Please try to sync your device. Please contact the system administrator if that doesn\'t solve the issue noting the operational area number %1$s.</string>
    <string name="fetch_structures_title">Loading failed</string>
    <string name="fetching_structures_title">Fetching Structures</string>
    <string name="fetching_structures_message">Fetching Structures for Selected Operational Area and Plan</string>
    <string name="select_campaign_operational_area_title">Plan and Operational area not set</string>
    <string name="select_campaign_operational_area">Plan and or Operational area not set. Select from the hamburger menu</string>
    <string name="revoked_plan_operational_area">Previously selected Plan and/or Operational area revoked. Select from the hamburger menu</string>
    <string name="location_and_plan_sync_in_progress">Location and Plan Sync in Progress</string>
    <string name="reveal_satellite_style" translatable="false">asset://reveal-streets-satellite.json</string>
    <string name="reveal_select_jurisdiction_style" translatable="false">asset://reveal-select-jurisdiction-satellite.json</string>
    <string name="reveal_mda_lite_style" translatable="false">asset://reveal-mda-lite-satellite.json</string>
    <string name="reveal_streets_style" translatable="false">reveal-streets-style.json</string>
    <string name="reveal_offline_map_download_style" translatable="false">map-download-style.json</string>
    <string name="reveal_datasource_name" translatable="false">reveal-data-set</string>
    <string name="reveal_layer_polygons" translatable="false">reveal-data-polygons</string>
    <string name="reveal_layer_points" translatable="false">reveal-data-points</string>
    <string name="base_map_feature_json" translatable="false">base_map_feature.json</string>
    <string name="task_not_found">This structure does not have a task assigned to it for the Plan %1s</string>
    <string name="error_fetching_location_hierarchy_title">Error Processing Locations Hierarchy</string>
    <string name="error_fetching_location_hierarchy">Error Processing Location Hierarchy. Log off to download location hierarchy again</string>
    <string name="selected_datasource_name" translatable="false">select-data</string>
    <string name="irs_task_description"> Visit the structure, assess and perform spray activities.</string>
    <string name="poat_task_description"> Update Potential Areas of Transmission</string>
    <string name="irs_verification_task_description"> Visit each structure in the operational area and verify status</string>
    <string name="form_save_failure_title">Error Saving Form</string>
    <string name="spray_form_save_failure">Error saving spray form</string>
    <string name="add_structure_form_save_failure">Error saving add structure form</string>
    <string name="zoom_in_to_select">Zoom in to select a structure</string>
    <string name="details_sprayed">Sprayable, Sprayed</string>
    <string name="details_not_sprayed">Sprayable, Not Sprayed</string>
    <string name="details_not_sprayable">Not Sprayable</string>
    <string name="no_structures_found">There are no structures mapped to this operational area. Please add a point to begin</string>
    <string name="change_spray_status">Change Spray Status</string>
    <string name="reveal_icon">Reveal Icon</string>
    <string name="attribution_text">Powered by OpenSRP \nBuilt on mSpray and DiSARM</string>
    <string name="thailand_attribution_text">Powered by Reveal</string>
    <string name="request_password_title">You are not near the structure</string>
    <string name="enter_admin_password"> Input admin password</string>
    <string name="wrong_admin_password">Wrong admin password</string>
    <string name="saving_title">Saving</string>
    <string name="saving_message">Saving form in Progress. Please wait</string>
    <string name="fetching_structure_title">Fetching Structure Details</string>
    <string name="fetching_structure_message">Fetching Structure Details. Please wait</string>
    <string name="fetching_mosquito_collection_points_title">Fetching Mosquito Collection Point Details</string>
    <string name="fetching_mosquito_collection_points_message">Fetching Mosquito Collection Point Details. Please wait</string>
    <string name="fetching_larval_dipping_points_title">Fetching Larval Dipping Point Details</string>
    <string name="fetching_larval_dipping_points_message">Fetching Larval Dipping Point Details. Please wait</string>
    <string name="fetching_household_title">Fetching Household Details</string>
    <string name="fetching_household_message">Fetching Household Details. Please wait</string>
    <string name="fetching_paot_title">Fetching PAOT Details</string>
    <string name="fetching_paot_message">Fetching PAOT Details. Please wait</string>
    <string name="narrowing_location_title">Calculating your location</string>
    <string name="narrowing_location_message">Calculating your location. Please wait</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="location_services_disabled_spray">You have declined enabling location services to get your current location. You shall have to enter admin password to spray the structure</string>
    <string name="location_services_disabled_add">You have declined enabling location services to get your current location. You shall have to enter admin password to add the structure</string>
    <string name="mosquito_collection_task_description">Setup Mosquito Collection Point and Record Results</string>
    <string name="larval_dipping_task_description">Perform Larval Dipping, Classify and Intervene</string>
    <string name="register_family">Register Family</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="hamburger_menu">Hamburger menu</string>
    <string name="focus_investigation">Focus Investigation</string>
    <string name="summary_forms">Other Forms</string>
    <string name="irs">IRS</string>
    <string name="mda">MDA</string>
    <string name="mda_lite">MDA-Lite</string>
    <string name="smc">SMC</string>
    <string name="task_icon">Task Icon</string>
    <string name="distance_from_structure">%1.0f m away</string>
    <string name="distance_from_center">%1.0f m from %2s center </string>
    <string name="mosquito_collection_point">Mosquito collection point</string>
    <string name="record_mosquito_collection">Record\nCollection</string>
    <string name="larval_breeding_site">Larval breeding site</string>
    <string name="record_larvacide">Record\nDipping</string>
    <string name="bcc">Behaviour Change communication</string>
    <string name="record_bcc">Record\nBCC</string>
    <string name="record_status">Record\nStatus</string>
    <string name="record_index">Record\nIndex</string>
    <string name="opening_form_title">Opening Form</string>
    <string name="opening_form_message">Please wait, Opening form</string>
    <string name="task_reason">Reason: %1s</string>
    <string name="structures">Structures</string>
    <string name="card_view_record_mosquito_collection">Record mosquito collection</string>
    <string name="record_larval_dipping">Record larval dipping</string>
    <string name="card_view_mosquito_collection_point">Mosquito Collection Point</string>
    <string name="mosquito_breeding_site">Mosquito Breeding Site</string>
    <string name="mosquito_collection_status_test_text">Status: Inactive</string>
    <string name="mosquito_collection_trap_set_date_test_text">Set Date: DD/MM/YY</string>
    <string name="mosquito_collection_trap_follow_up_date_test_text">Follow-up Date: DD/MM/YY</string>
    <string name="mosquito_collection_trap_collected_date_test_text">Collected Date: DD/MM/YY</string>
    <string name="larval_breeding_identified_date_test_text">Identified Date:&#160;</string>
    <string name="larval_breeding_larvacide_date_test_text">Larvacide Date:&#160;</string>
    <string name="mosquito_collection_trap_set_date">Set Date:&#160;</string>
    <string name="mosquito_collection_trap_follow_up_date">Follow-up Date:&#160;</string>
    <string name="paot_last_updated_date_test_text">Last Updated Date:&#160;</string>
    <string name="card_view_edit_paot_details">Edit PAOT Details</string>
    <string name="card_view_paot">Potential Area of Transmission</string>
    <string name="residents">RESIDENTS</string>
    <string name="return_to_all_families">Return</string>
    <string name="tasks">TASKS (%1$d)</string>
    <string name="tasks_section_header">Tasks</string>
    <string name="comma">,</string>
    <string name="distribute_llin">Distribute Bednet</string>
    <string name="record_llin">Record\nDistribution</string>
    <string name="record_test">Record\nScreening</string>
    <string name="detect_case">Detect\nCase</string>
    <string name="fetch_family_failed">Fetch Family Failed</string>
    <string name="failed_to_find_family">Failed to get Family Details</string>
    <string name="family_registration">Family Registration</string>
    <string name="indicator">Indicator</string>
    <string name="value">Value</string>
    <string name="health_education_ages_5_to_15_years">Health education ages 5-15 yrs</string>
    <string name="health_education_16_years_and_above">Health education 16 yrs above</string>
    <string name="vitamina_total_6_to_11_months">Vitamin A total 6-11 month</string>
    <string name="vitamina_total_12_to_59_months">Vitamin A total 12-59 months</string>
    <string name="alb_meb_total_12_to_59_months">ALB/MEB total 12-59 months</string>
    <string name="alb_meb_total_5_to_15_years">ALB/MEB total 5-15 years</string>
    <string name="alb_meb_total_16_years_and_above">ALB/MEB total 16 years and above</string>
    <string name="pzq_total_5_to_15_years">PZQ total 5-15 years</string>
    <string name="pzq_total_16_years_and_above">PZQ total 16 years and above</string>
    <string name="server">Server</string>
    <string name="reveal_instance_selector">Select Reveal Server</string>
    <string name="current_server">Current Server: %s</string>
    <string name="reveal_language_selector">Select Language</string>
</resources>