<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/server">
        <ListPreference android:key="reveal_instance_key"
            android:title="@string/reveal_instance_selector"
            android:entries="@array/reveal_instance_names"
            android:summary="@string/current_server"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/reveal_instance_keys"/>
        <Preference android:key="privacy_policy"  android:title="Privacy Policy" android:summary="Privacy Policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://revealprecision.com/privacy-policy/" />
        </Preference>

        <ListPreference android:key="reveal_language_key"
            android:title="@string/reveal_language_selector"
            android:entries="@array/reveal_languages"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/reveal_instance_keys"/>
    </PreferenceCategory>
</PreferenceScreen>